Create HTML  markup for the project in index.html file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>React Logo</title>
 </head>
 <body>
-    
+    <div class="react">
+        <div class="circle"></div>
+    </div>
 </body>
 </html>
